<resources>
    <string name="app_name">Motivator_FINAL</string>
    <string name="currentLanguage">EN</string>

    <string name="gym">Gym</string>
    <string name="squat">Squat</string>
    <string name="bench">Bench press</string>
    <string name="deadlift">Deadlift</string>
    <string name="sets">Number of sets</string>
    <string name="reps">Number of reps</string>
    <string name="weight">Weight (kg)</string>
    <string name="height">Height (cm)</string>
    <string name="apply">Apply</string>
    <string name="language">Choose language</string>
    <string name="gymWarning">Please select movement!</string>
    <string name="runWarning">Please enter time and/or distance</string>

    <string name="clearData">Are you sure you want to delete all data?</string>
    <string name="clearDataYes">Yes</string>
    <string name="clearDataNo">No</string>

    <string name="bmi0">Very severely underweight</string>
    <string name="bmi1">Severely underweight</string>
    <string name="bmi2">Underweight</string>
    <string name="bmi3">Normal weight</string>
    <string name="bmi4">Overweight</string>
    <string name="bmi5">Obese class I</string>
    <string name="bmi6">Obese class II</string>
    <string name="bmi7">Obese class III</string>

    <string name="run">Run</string>
    <string name="time">Time (min)</string>
    <string name="distance">Distance (m)</string>
    <string name="submit">Submit</string>
    <string name="count">count</string>


    <string name="velocity">Velocity</string>
    <string name="velocity_kmh">Velocity (km/h)</string>





    <string name="privacyPolicy" translatable="false">Privacy Policy \n"
                Tuuni Mustonen, Tuomas Rajala and Maksim Ilmast built the Motivator app as a Free app. This SERVICE is provided by Tuuni Mustonen, Tuomas Rajala and Maksim Ilmast at no cost and is intended for use as is. This page is used to inform visitors regarding our policies with the collection, use, and disclosure of Personal Information if anyone decided to use our Service. If you choose to use our Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that app collect is used for providing and improving the Service. We will not use or share your information with anyone except as described in this Privacy Policy. The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at Motivator unless otherwise defined in this Privacy Policy.\n
                Information Collection and Use\n
                For a better experience, while using our Service, we may require you to provide us with certain personally identifiable information provided by the user such as: height, weight, training data, etc. We do not disclose the information to third parties. The information that We request will be retained on your device and is not collected by us in any way.\n
                Log Data\n
                We want to inform you that whenever you use our Service, in a case of an error in the app we collect data and information on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing our Service, the time and date of your use of the Service, and other statistics.\n
                Cookies\n
                Cookies are files with a small amount of data that are commonly used as anonymous unique identifiers. These are sent to your browser from the websites that you visit and are stored on your device\'s internal memory. This Service does not use these “cookies” explicitly.\n
                Security\n
                We value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and we cannot guarantee its absolute security.\n
                Children’s Privacy\n
                These Services do not address anyone under the age of 13. We do not knowingly collect personally identifiable information from children under 13. In the case we discover that a child under 13 has provided us with personal information, we immediately delete this from our servers.\n
                Changes to This Privacy Policy\n
                We may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. We will notify you of any changes by posting the new Privacy Policy on this page. These changes are effective immediately after they are posted on this page.\n
                Contact Us\n
                If you have any questions or suggestions about our Privacy Policy contact us at Metropolia University of Applied Sciences. This privacy policy page was created at privacypolicytemplate.net and modified/generated by App Privacy Policy Generator\n</string>


</resources>
